make regex configurable

--- a/src/med_img_de_id.ipynb
+++ b/src/med_img_de_id.ipynb
@@ -29,11 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sdfjks@dfsd.com', '08-01-2004']\n"
+     ]
+    }
+   ],
    "source": [
     "from med_img_de_id_class import ProcessMedImage\n",
+    "import re\n",
     "# setup environment\n",
     "LOC_DICOM_FOLDER = '../images/med_phi_img/'\n",
     "LOC_DE_ID_DICOM_FOLDER = '../images/med_de_id_img/'\n",
@@ -56,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -191,9 +200,10 @@
      "output_type": "stream",
      "text": [
       "Found text: MARTIN CHAD [U] 01.01.2000\n",
-      "Sensitive text detected in ../images/med_phi_img/MartinChad-1-1.png\n",
+      "Detected PHI: ['01.01.2000']\n",
+      "Sensitive text detected in MartinChad-1-1.dcm\n",
       "[{'Text': 'MARTIN CHAD [U] 01.01.2000', 'Text Block': {'Left': 1552, 'Top': 1850, 'Width': 319, 'Height': 23}}]\n",
-      "Showing redacted image\n"
+      "Sensitive text in image have been redacted\n"
      ]
     },
     {
@@ -210,19 +220,18 @@
    "source": [
     "from PIL import Image\n",
     "local_de_id_png = LOC_DE_ID_DICOM_FOLDER + local_img_file.replace('.dcm', '.png')\n",
-    "local_png = LOC_DICOM_FOLDER + local_img_file.replace('.dcm', '.png')\n",
     "id_text_detected = processor.detect_id_in_img(None, None, None)\n",
     "if id_text_detected and len(id_text_detected):\n",
-    "    print(f'Sensitive text detected in {local_png}')\n",
+    "    print(f'Sensitive text detected in {local_img_file}')\n",
     "    print (id_text_detected)\n",
     "    processor.redact_id_in_image(id_text_detected, local_de_id_png)\n",
     "    # show redacted image\n",
-    "    print('Showing redacted image')\n",
+    "    print('Sensitive text in image have been redacted')\n",
     "    img = Image.open(local_de_id_png)\n",
     "    processor.draw_img(img)\n",
     "\n",
     "else:\n",
-    "    print(f'No sensitive text detected in {src_png_key}')\n"
+    "    print(f'No sensitive text detected in {local_img_file}')\n"
    ]
   },
   {
@@ -234,17 +243,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DICOM file has been created and saved to ../images/med_de_id_img/MartinChad-1-1.dcm.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "local_de_id_dicom = local_de_id_png.replace('.png', '.dcm')\n",
     "if id_text_detected and len(id_text_detected) > 0:\n",
@@ -260,17 +261,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DICOM file has been uploaded to the source a3 bucket.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "local_img_file = src_key.split('/')[-1]\n",
     "\n",
@@ -296,17 +289,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No PII/PHI found in redacted DICOM\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from common.utils import dump_dict_to_tsv, get_date_time\n",
     "tags, ids = processor.detect_id_in_tags(dicom_dataset)\n",
@@ -334,17 +319,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No sensitive text detected in de-id-dicom-images/MartinChad-1-1.png\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from PIL import Image\n",
     "\n",
@@ -380,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
