--- a/src/med_img_de_id.ipynb
+++ b/src/med_img_de_id.ipynb
@@ -29,17 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\\d{3}\\s[a-zA-Z]{4}\\s[a-zA-Z]{6}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from med_img_de_id_class import ProcessMedImage\n",
     "from common.utils import generate_regex\n",
@@ -51,7 +43,9 @@
     "SOURCE_PREFIX = \"dicom-images/\"\n",
     "DESTINATION_PREFIX = \"de-id-dicom-images/\"\n",
     "EVAL_BUCKET = \"crdc-hub-dev\"\n",
-    "EVAL_PREFIX = \"eval-de-id-dicom-images/\"\n"
+    "EVAL_PREFIX = \"eval-de-id-dicom-images/\"\n",
+    "\n",
+    "processor = ProcessMedImage()"
    ]
   },
   {
