--- a/src/med_img_de_id.ipynb
+++ b/src/med_img_de_id.ipynb
@@ -70,12 +70,12 @@
      "output_type": "stream",
      "text": [
       "number_of_frames: 1\n",
-      "min_pixel: 0, max_pixel: 4095\n"
+      "min_pixel: 0, max_pixel: 32767\n"
      ]
     }
    ],
    "source": [
-    "# local_img_file = \"1-053.dcm\" \n",
+    "local_img_file = \"1-053.dcm\" \n",
     "# local_img_file =\"RiveraMichael.dcm\"\n",
     "# local_img_file = \"MeyerStephanie.dcm\"\n",
     "# local_img_file = \"hefe.dcm\"\n",
@@ -87,7 +87,7 @@
     "# local_img_file = \"DavidsonDouglas.dcm\"\n",
     "# local_img_file = \"00002024.dcm\"\n",
     "# local_img_file = \"00000044.dcm\"\n",
-    "local_img_file = \"00000001.dcm\"\n",
+    "# local_img_file = \"00000001.dcm\"\n",
     "# local_img_file = \"00000027.dcm\"\n",
     "local_img_path = LOC_DICOM_FOLDER + local_img_file\n",
     "src_key= SOURCE_PREFIX + local_img_file\n",
@@ -112,87 +112,103 @@
      "output_type": "stream",
      "text": [
       "De-identifying DICOM metadata\n",
-      "Tag: (0008, 0016) SOP Class UID                       UI: Digital X-Ray Image Storage - For Presentation - Redacted Value: 1.2.826.0.1.3680043.8.498.93309449797502401120550241058771153076\n",
-      "Tag: (0008, 0018) SOP Instance UID                    UI: 2.1.497.0.0.1835643.9.081.1190820140911593291 - Redacted Value: 1.2.826.0.1.3680043.8.498.70903844714426805757501069822848644223\n",
-      "Tag: (0008, 0020) Study Date                          DA: '20181213' - Redacted Value: 00010101\n",
-      "Tag: (0008, 0021) Series Date                         DA: '20181213' - Redacted Value: 00010101\n",
-      "Tag: (0008, 0022) Acquisition Date                    DA: '20181213' - Redacted Value: 00010101\n",
-      "Tag: (0008, 0023) Content Date                        DA: '20181213' - Redacted Value: 00010101\n",
-      "Tag: (0008, 0030) Study Time                          TM: '153251' - Redacted Value: 000000.00\n",
-      "Tag: (0008, 0031) Series Time                         TM: '153318' - Redacted Value: 000000.00\n",
-      "Tag: (0008, 0032) Acquisition Time                    TM: '153511' - Redacted Value: 000000.00\n",
-      "Tag: (0008, 0033) Content Time                        TM: '153251' - Redacted Value: 000000.00\n",
-      "Tag: (0008, 0050) Accession Number                    SH: '20181213E138063' - Redacted Value: ^ANONYMIZED\n",
-      "Tag: (0008, 0090) Referring Physician's Name          PN: 'RICHARDSON^NICHOLAS' - Redacted Value: Dr.^Physician\n",
-      "Tag: (0008, 1030) Study Description                   LO: 'XR CHEST 1 VIEW AP' - Redacted Value: ^ANONYMIZED\n",
-      "Tag: (0008, 103e) Series Description                  LO: 'CHEST AP' - Redacted Value: Series^Description\n",
-      "Tag: (0010, 0010) Patient's Name                      PN: 'JAMES^RUSSELL' - Redacted Value: The^Patient\n",
-      "Tag: (0010, 0020) Patient ID                          LO: '751685205' - Redacted Value: patient^0183\n",
-      "Tag: (0010, 0030) Patient's Birth Date                DA: '19471021' - Redacted Value: 00010101\n",
-      "Tag: (0010, 0040) Patient's Sex                       CS: 'M' - Redacted Value: \n",
-      "Tag: (0010, 1010) Patient's Age                       AS: '071Y' - Redacted Value: \n",
-      "Tag: (0010, 1020) Patient's Size                      DS: '1.61' - Redacted Value: 0\n",
-      "Tag: (0010, 1030) Patient's Weight                    DS: '74.073' - Redacted Value: 0\n",
-      "Tag: (0018, 1020) Software Versions                   LO: '2.18.0.13' - Redacted Value: ^ANONYMIZED\n",
-      "Tag: (0018, 700c) Date of Last Detector Calibration   DA: '20181118' - Redacted Value: 00010101\n",
-      "Tag: (0018, 700e) Time of Last Detector Calibration   TM: '195232.023' - Redacted Value: 000000.00\n",
-      "Tag: (0020, 000d) Study Instance UID                  UI: 2.1.497.0.0.1835643.9.081.3351050814573364178 - Redacted Value: 1.2.826.0.1.3680043.8.498.12372289320255216260030039034645098873\n",
-      "Tag: (0020, 000e) Series Instance UID                 UI: 2.1.497.0.0.1835643.9.081.1307210876115091140 - Redacted Value: 1.2.826.0.1.3680043.8.498.39192757444426073927643210240319308820\n",
-      "Tag: (0028, 1040) Pixel Intensity Relationship        CS: 'LOG' - Redacted Value: \n",
-      "Tag: (0028, 1054) Rescale Type                        LO: 'US' - Redacted Value: ^ANONYMIZED\n",
-      "Tag: (0040, 1400) Requested Procedure Comments        LT: Array of 27 elements - Redacted Value: ^ANONYMIZED\n",
-      "Tag: (0040, 2400) Imaging Service Request Comments    LT: Array of 18 elements - Redacted Value: ^ANONYMIZED\n",
-      "Tag: (0040, a075) Verifying Observer Name             PN: 'ALLISON^ERNEST' - Redacted Value: Mr.^Observer\n",
+      "Tag: (0008, 0014) Instance Creator UID                UI: 1.2.826.0.1.3680043.8.498.47727583978394611398299392902253886270 - Redacted Value: 1.2.826.0.1.3680043.8.498.91270693307293467108756280419050032321\n",
+      "Tag: (0008, 0016) SOP Class UID                       UI: Positron Emission Tomography Image Storage - Redacted Value: 1.2.826.0.1.3680043.8.498.17738661743762790578255865905558417641\n",
+      "Tag: (0008, 0018) SOP Instance UID                    UI: 1.2.826.0.1.3680043.8.498.13222035058220747980361052965767848125 - Redacted Value: 1.2.826.0.1.3680043.8.498.83537136979687373120861492379741817519\n",
+      "Tag: (0008, 0050) Accession Number                    SH: '^ANONYMIZED' - Redacted Value: ^ANONYMIZED\n",
+      "Tag: (0008, 0080) Institution Name                    LO: '^ANONYMIZED' - Redacted Value: ^ANONYMIZED\n",
+      "Tag: (0008, 0090) Referring Physician's Name          PN: 'HAAS^WILLIAM' - Redacted Value: Dr.^Physician\n",
+      "Tag: (0008, 103e) Series Description                  LO: 'PET IR NO AC WB' - Redacted Value: Series^Description\n",
+      "Tag: (0008, 1050) Performing Physician's Name         PN: 'REESE^STEPHEN' - Redacted Value: Dr.^Physician\n",
+      "Tag: (0008, 1090) Manufacturer's Model Name           LO: '^ANONYMIZED' - Redacted Value: ^ANONYMIZED\n",
+      "Tag: (0009, 1007) [PET exam_id]                       UI: 1.2.826.0.1.3680043.8.498.43297425198749631804974653714641789040 - Redacted Value: 1.2.826.0.1.3680043.8.498.26099456102946169189155736276217801339\n",
+      "Tag: (0009, 100a) [PET scan_id]                       UI: 1.2.826.0.1.3680043.8.498.13139588354911658749814145862237773537 - Redacted Value: 1.2.826.0.1.3680043.8.498.98053082857166347741174068991170528705\n",
+      "Tag: (0009, 1013) [PET for_identifier]                UI: 1.2.826.0.1.3680043.8.498.42282835671287817134101345447263681603 - Redacted Value: 1.2.826.0.1.3680043.8.498.97405336839809513903351050226033536890\n",
+      "Tag: (0009, 1056) [PET normal_cal_id]                 UI: 1.2.826.0.1.3680043.8.498.12021902856444984567906015348075571311 - Redacted Value: 1.2.826.0.1.3680043.8.498.11888501420799350082767972653295472791\n",
+      "Tag: (0009, 1057) [PET normal_2d_cal_id]              UI: 1.2.826.0.1.3680043.8.498.22815887486110488437903064307721575647 - Redacted Value: 1.2.826.0.1.3680043.8.498.57441654079079351098625001231985237338\n",
+      "Tag: (0009, 1059) [PET wc_cal_id]                     UI: 1.2.826.0.1.3680043.8.498.83391142078153772572214006249523073112 - Redacted Value: 1.2.826.0.1.3680043.8.498.18656988411133831830927184656910187152\n",
+      "Tag: (0009, 105c) [PET frame_id]                      UI: 1.2.826.0.1.3680043.8.498.12710427803912820936942576613313205272 - Redacted Value: 1.2.826.0.1.3680043.8.498.11594270990434266373178932302037541264\n",
+      "Tag: (0009, 105d) [PET scan_id]                       UI: 1.2.826.0.1.3680043.8.498.28115392568469705529142019129891640440 - Redacted Value: 1.2.826.0.1.3680043.8.498.78263274139186234510126591517995635952\n",
+      "Tag: (0009, 105e) [PET exam_id]                       UI: 1.2.826.0.1.3680043.8.498.11826568779625925578584209279827134238 - Redacted Value: 1.2.826.0.1.3680043.8.498.45067999184317001804152859671446470379\n",
+      "Tag: (0009, 1098) [PET norm_cal_id]                   UI: 1.2.826.0.1.3680043.8.498.54326957976725862902221131738953467717 - Redacted Value: 1.2.826.0.1.3680043.8.498.12945543285524048289747468852016654396\n",
+      "Tag: (0010, 0010) Patient's Name                      PN: 'The^Patient' - Redacted Value: The^Patient\n",
+      "Tag: (0010, 0020) Patient ID                          LO: '^ANONYMIZED' - Redacted Value: patient^0218\n",
+      "Tag: (0010, 1020) Patient's Size                      DS: '0.0' - Redacted Value: 0\n",
+      "Tag: (0010, 1030) Patient's Weight                    DS: '0.0' - Redacted Value: 0\n",
+      "Tag: (0010, 2180) Occupation                          SH: 'Chief Operating' - Redacted Value: ^ANONYMIZED\n",
+      "Tag: (0010, 21b0) Additional Patient History          LT: 'LUNG NODULE' - Redacted Value: ^ANONYMIZED\n",
+      "Tag: (0018, 1020) Software Versions                   LO: '^ANONYMIZED' - Redacted Value: ^ANONYMIZED\n",
+      "Tag: (0020, 000d) Study Instance UID                  UI: 1.2.826.0.1.3680043.8.498.18642360804437139561791249381776323597 - Redacted Value: 1.2.826.0.1.3680043.8.498.40837216176844416095926778592704763088\n",
+      "Tag: (0020, 000e) Series Instance UID                 UI: 1.2.826.0.1.3680043.8.498.11897000902040298229517643420398325585 - Redacted Value: 1.2.826.0.1.3680043.8.498.13153296999382816580459426464795369283\n",
+      "Tag: (0020, 0052) Frame of Reference UID              UI: 1.2.826.0.1.3680043.8.498.11816209348958312199668814607199076563 - Redacted Value: 1.2.826.0.1.3680043.8.498.12964419644104581237401075844997703291\n",
+      "Tag: (0018, 1072) Radiopharmaceutical Start Time      TM: '092300.00' - Redacted Value: 000000.00\n",
+      "Tag: (0008, 0100) Code Value                          SH: 'C-111A1' - Redacted Value: ^ANONYMIZED\n",
+      "Tag: (0008, 0102) Coding Scheme Designator            SH: '99SDM' - Redacted Value: ^ANONYMIZED\n",
+      "Tag: (0008, 0104) Code Meaning                        LO: '18F' - Redacted Value: ^ANONYMIZED\n",
+      "Tag: (0008, 0100) Code Value                          SH: 'Y-X1743' - Redacted Value: ^ANONYMIZED\n",
+      "Tag: (0008, 0102) Coding Scheme Designator            SH: '99SDM' - Redacted Value: ^ANONYMIZED\n",
+      "Tag: (0008, 0104) Code Meaning                        LO: 'FDG -- fluorodeoxyglucose' - Redacted Value: ^ANONYMIZED\n",
+      "Tag: (0008, 0100) Code Value                          SH: 'F-10450' - Redacted Value: ^ANONYMIZED\n",
+      "Tag: (0008, 0102) Coding Scheme Designator            SH: '99SDM' - Redacted Value: ^ANONYMIZED\n",
+      "Tag: (0008, 0104) Code Meaning                        LO: 'recumbent' - Redacted Value: ^ANONYMIZED\n",
+      "Tag: (0008, 0100) Code Value                          SH: 'F-10340' - Redacted Value: ^ANONYMIZED\n",
+      "Tag: (0008, 0102) Coding Scheme Designator            SH: '99SDM' - Redacted Value: ^ANONYMIZED\n",
+      "Tag: (0008, 0104) Code Meaning                        LO: 'supine' - Redacted Value: ^ANONYMIZED\n",
+      "Tag: (0008, 0100) Code Value                          SH: 'F-10470' - Redacted Value: ^ANONYMIZED\n",
+      "Tag: (0008, 0102) Coding Scheme Designator            SH: '99SDM' - Redacted Value: ^ANONYMIZED\n",
+      "Tag: (0008, 0104) Code Meaning                        LO: 'headfirst' - Redacted Value: ^ANONYMIZED\n",
       "Redacted DICOM matadata\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/gup2/workspace/vscode/crdcdh/crdcdh-de-id-notebook/.venv/lib/python3.12/site-packages/pydicom/valuerep.py:443: UserWarning: Invalid value for VR UI: '2.1.497.0.0.1835643.9.081.1190820140911593291'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
-      "  warnings.warn(msg)\n",
-      "/Users/gup2/workspace/vscode/crdcdh/crdcdh-de-id-notebook/.venv/lib/python3.12/site-packages/pydicom/valuerep.py:443: UserWarning: Invalid value for VR UI: '2.1.497.0.0.1835643.9.081.3351050814573364178'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
-      "  warnings.warn(msg)\n",
-      "/Users/gup2/workspace/vscode/crdcdh/crdcdh-de-id-notebook/.venv/lib/python3.12/site-packages/pydicom/valuerep.py:443: UserWarning: Invalid value for VR UI: '2.1.497.0.0.1835643.9.081.1307210876115091140'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
-      "  warnings.warn(msg)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(31,\n",
-       " [(8, 22),\n",
+       "(45,\n",
+       " [(8, 20),\n",
+       "  (8, 22),\n",
        "  (8, 24),\n",
-       "  (8, 32),\n",
-       "  (8, 33),\n",
-       "  (8, 34),\n",
-       "  (8, 35),\n",
-       "  (8, 48),\n",
-       "  (8, 49),\n",
-       "  (8, 50),\n",
-       "  (8, 51),\n",
        "  (8, 80),\n",
+       "  (8, 128),\n",
        "  (8, 144),\n",
-       "  (8, 4144),\n",
        "  (8, 4158),\n",
+       "  (8, 4176),\n",
+       "  (8, 4240),\n",
+       "  (9, 4103),\n",
+       "  (9, 4106),\n",
+       "  (9, 4115),\n",
+       "  (9, 4182),\n",
+       "  (9, 4183),\n",
+       "  (9, 4185),\n",
+       "  (9, 4188),\n",
+       "  (9, 4189),\n",
+       "  (9, 4190),\n",
+       "  (9, 4248),\n",
        "  (16, 16),\n",
        "  (16, 32),\n",
-       "  (16, 48),\n",
-       "  (16, 64),\n",
-       "  (16, 4112),\n",
        "  (16, 4128),\n",
        "  (16, 4144),\n",
+       "  (16, 8576),\n",
+       "  (16, 8624),\n",
        "  (24, 4128),\n",
-       "  (24, 28684),\n",
-       "  (24, 28686),\n",
        "  (32, 13),\n",
        "  (32, 14),\n",
-       "  (40, 4160),\n",
-       "  (40, 4180),\n",
-       "  (64, 5120),\n",
-       "  (64, 9216),\n",
-       "  (64, 41077)])"
+       "  (32, 82),\n",
+       "  (24, 4210),\n",
+       "  (8, 256),\n",
+       "  (8, 258),\n",
+       "  (8, 260),\n",
+       "  (8, 256),\n",
+       "  (8, 258),\n",
+       "  (8, 260),\n",
+       "  (8, 256),\n",
+       "  (8, 258),\n",
+       "  (8, 260),\n",
+       "  (8, 256),\n",
+       "  (8, 258),\n",
+       "  (8, 260),\n",
+       "  (8, 256),\n",
+       "  (8, 258),\n",
+       "  (8, 260)])"
       ]
      },
      "execution_count": 3,
