--- a/src/med_img_de_id_eval.ipynb
+++ b/src/med_img_de_id_eval.ipynb
@@ -254,11 +254,11 @@
     "                processor.redact_tags(detected_elements)\n",
     "                redacted_tags = len(detected_elements)\n",
     "                \n",
-    "                # local_eval_dicom = local_de_id_dicom.replace(LOC_DE_ID_DICOM_FOLDER, LOC_EVAL_DICOM_FOLDER)\n",
-    "                local_eval_dicom = local_de_id_dicom\n",
-    "                # if last_eval_fold != os.path.dirname(local_eval_dicom):\n",
-    "                #     last_eval_fold = os.path.dirname(local_eval_dicom)\n",
-    "                #     os.makedirs(os.path.dirname(local_eval_dicom), exist_ok=True)    \n",
+    "                local_eval_dicom = local_de_id_dicom.replace(LOC_DE_ID_DICOM_FOLDER, LOC_EVAL_DICOM_FOLDER)\n",
+    "                # local_eval_dicom = local_de_id_dicom\n",
+    "                if last_eval_fold != os.path.dirname(local_eval_dicom):\n",
+    "                    last_eval_fold = os.path.dirname(local_eval_dicom)\n",
+    "                    os.makedirs(os.path.dirname(local_eval_dicom), exist_ok=True)    \n",
     "                processor.save_de_id_dicom(local_eval_dicom)\n",
     "                metadata_redacted_cnt +=1\n",
     "            eval_dicom_list.append({FILE_NAME: filename, \"Redacted Tags\": redacted_tags, \"Text In Pixel\": text_in_image, \"PHI In Pixel\": phi_in_image, FILE_PATH: filepath})  \n",
