updated for test dataset

--- a/src/med_img_de_id_batch.ipynb
+++ b/src/med_img_de_id_batch.ipynb
@@ -251,7 +251,7 @@
     "    print(f'Error processing de-id dicom file: {e}')\n",
     "    raise e\n",
     "finally:\n",
-    "    processor.update_rules_in_configs(rule_config_file_path)\n",
+    "    # processor.update_rules_in_configs(rule_config_file_path)\n",
     "    processor.close()\n",
     "    processor = None\n",
     "# create a tsv file with the results of the de-id process\n",
