--- a/src/med_img_de_id_eval.ipynb
+++ b/src/med_img_de_id_eval.ipynb
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from med_img_de_id_class import ProcessMedImage\n",
     "from common.utils import get_boto3_session, cleanup_dir, get_date_time, dump_dict_to_tsv\n",
     "# setup environment\n",
-    "LOC_DICOM_FOLDER = '/Users/gup2/Documents/AI/input_data/'\n",
+    "LOC_DICOM_FOLDER = '/Users/gup2/Documents/AI/input_data_test/'\n",
     "LOC_DE_ID_DICOM_FOLDER = '../images/med_de_id_img/evaluation/data/'\n",
     "LOC_EVAL_DICOM_FOLDER = '../images/med_eval_img/evaluation/data/'\n",
     "SOURCE_BUCKET = \"de-id-src\"\n",
@@ -74,7 +74,6 @@
    "source": [
     "import glob, os, datetime\n",
     "import warnings\n",
-    "\n",
     "# Suppress all UserWarnings\n",
     "warnings.simplefilter(\"ignore\", UserWarning)\n",
     "dicom_list = []\n",
@@ -86,22 +85,25 @@
     "process_cnt = 0\n",
     "metadata_redacted_cnt = 0\n",
     "pixel_redacted_cnt = 0\n",
+    "# create a de-id processor\n",
+    "aws_session = get_boto3_session(\"esi\")\n",
+    "processor = ProcessMedImage(aws_session, rule_config_file_path, True)\n",
     "try:\n",
-    "    # create a de-id processor\n",
-    "    processor = ProcessMedImage(aws_session, rule_config_file_path, True)\n",
+    "    \n",
     "    last_de_if_fold = \"None\"\n",
     "    for filepath in dicom_files:\n",
     "        # if os.path.exists(filepath): continue\n",
     "        filename = os.path.basename(filepath)\n",
     "        prefix = os.path.join(SOURCE_PREFIX, '/'.join(filepath.split('/')[-4:-2]))\n",
+    "        key = os.path.join(prefix, filename).replace('dcm', 'png')\n",
     "        short_file_path = '/'.join(filepath.split('/')[-4:])\n",
-    "        # print('Filename: {}, Filepath: {}'.format(filename, short_file_path))\n",
+    "        # print(f'Bucket: {SOURCE_BUCKET}, key: {key}')\n",
     "        \n",
     "        text_in_image = False\n",
     "        phi_in_image = False\n",
     "        redacted_tags = 0\n",
     "    \n",
-    "        result = processor.parse_dicom_file(None, None, filepath)\n",
+    "        result = processor.parse_dicom_file(SOURCE_BUCKET, key, filepath, True)\n",
     "        dicom_dataset = processor.ds\n",
     "        if not dicom_dataset:\n",
     "            print(f'Error parsing dicom file, invalid metadata: {filepath}')\n",
@@ -111,8 +113,8 @@
     "        if dicom_dataset:\n",
     "            redacted_count, redacted_tags = processor.de_identify_dicom()\n",
     "            metadata_redacted_cnt += 1\n",
-    "            id_text_detected, text_in_image = processor.detect_id_in_img(None, None)\n",
-    "            if text_in_image and id_text_detected and len(id_text_detected):\n",
+    "            id_text_detected, text_in_image = processor.detect_id_in_img(SOURCE_BUCKET, key, True)\n",
+    "            if text_in_image and id_text_detected and len(id_text_detected) > 0:\n",
     "                phi_in_image = True\n",
     "                # print(f'Sensitive text detected in {filepath}')\n",
     "                print (f'Found PHI in pixel: {id_text_detected} in DICOM: {short_file_path}.')\n",
@@ -224,6 +226,7 @@
     " # create a de-id processor\n",
     "aws_session = get_boto3_session(\"esi\")\n",
     "processor = ProcessMedImage(aws_session, rule_config_file_path, True)\n",
+    "eval_dicom_files = eval_dicom_files[26000:]\n",
     "try:\n",
     "    # for filepath in eval_dicom_files:\n",
     "    last_eval_fold = \"None\"\n",
@@ -267,7 +270,7 @@
     "    print(f'Error processing de-id dicom file: {e}')\n",
     "    raise e\n",
     "finally:\n",
-    "    processor.update_rules_in_configs(rule_config_file_path)\n",
+    "    # processor.update_rules_in_configs(rule_config_file_path)\n",
     "    processor.close()\n",
     "    processor = None\n",
     "# create a tsv file with the results of the de-id process\n",
