--- a/src/med_img_de_id_one.ipynb
+++ b/src/med_img_de_id_one.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "local_img_file = \"1-053.dcm\" \n",
+    "# local_img_file = \"1-053.dcm\" \n",
     "# local_img_file =\"RiveraMichael.dcm\"\n",
     "# local_img_file = \"MeyerStephanie.dcm\"\n",
     "# local_img_file = \"hefe.dcm\"\n",
@@ -78,7 +78,7 @@
     "# local_img_file = \"DavidsonDouglas.dcm\"\n",
     "# local_img_file = \"00002024.dcm\"\n",
     "# local_img_file = \"00000044.dcm\"\n",
-    "# local_img_file = \"00000001.dcm\"\n",
+    "local_img_file = \"00000001.dcm\"\n",
     "# local_img_file = \"00000027.dcm\"\n",
     "local_img_path = LOC_DICOM_FOLDER + local_img_file\n",
     "src_key= SOURCE_PREFIX + local_img_file\n",
@@ -296,8 +296,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if ids and len(ids) > 0:\n",
-    "    processor.update_rules_in_configs(rule_config_file_path)\n",
+    "# if ids and len(ids) > 0:\n",
+    "#     processor.update_rules_in_configs(rule_config_file_path)\n",
     "\n",
     "# close the processor\n",
     "processor.close()"
